# boilerman

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  boiler_8hpp.html  c_pp.makefile  classBoiler.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_998e18c0236ad08689a16d4096bf8f70.html  dir_d14645f6b233b2910b92568575840176.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  fileutil_8hpp.html  index.html  lib_8hpp.html  main_8hpp.html  modules.html  namespaces.html  pages.html  searchdata-v1.js  structlibrary.html
.github/workflows/: ci.yml
1/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
1/cmake/: external-lib.cmake  install-config.cmake  install-rules.cmake  sources.cmake  variables.cmake
1/test/: CMakeLists.txt
1/test/src/: 1_test.cpp
cmake/: dev-mode.cmake  external-lib.cmake  install-rules.cmake  sources.cmake  variables.cmake
config/: boilers.json  project.json
dependencies/c_pp.makefile/: Makefile
dependencies/python.zipapp/: Makefile
in/: thing.txt
in/meep/: another.txt
include/: boiler.h  boilerman.hpp  boilermanager.h  fileutils.h
include/boilerman/: main.hpp
include/boilerman-lib/: boiler.hpp  fileutil.hpp  lib.hpp
src/: boilerman.cpp  boilermanager.cpp
src/boilerman/: main.cpp
src/boilerman-lib/: boiler.cpp  fileutil.cpp  lib.cpp
test/: CMakeLists.txt
test/src/: boilerman_test.cpp
testing/: CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
(+14 files in other folders)
